@@ -167,10 +167,8 @@ struct mpg123_handle_struct
 	{
 #ifdef OPT_MULTI
 
-#ifndef NO_LAYER3
-#if (defined OPT_3DNOW_VINTAGE || defined OPT_3DNOWEXT_VINTAGE || defined OPT_SSE || defined OPT_X86_64 || defined OPT_AVX || defined OPT_NEON || defined OPT_NEON64)
+#ifdef OPT_THE_DCT36
 		void (*the_dct36)(real *,real *,real *,const real *,real *);
-#endif
 #endif
 
 #endif
